[gd_scene load_steps=15 format=4 uid="uid://di31cuiaxvo7s"]

[ext_resource type="PackedScene" uid="uid://cbodjjoib2qrn" path="res://scenes/characters/player.tscn" id="1_377w7"]
[ext_resource type="Script" uid="uid://dek8k2fbphrnu" path="res://scenes/levels/level.gd" id="1_xb4v1"]
[ext_resource type="Texture2D" uid="uid://e3any14vxjad" path="res://sprites/Tileset.png" id="3_mbbpy"]
[ext_resource type="Texture2D" uid="uid://ci3kvqokrn6o6" path="res://sprites/testtile.png" id="3_ouxo3"]
[ext_resource type="PackedScene" uid="uid://c6wxbv4ruot4l" path="res://scenes/characters/allies/skeletonwarrior.tscn" id="4_urvlt"]
[ext_resource type="Script" uid="uid://rkcfoq2ddkxw" path="res://scenes/levels/unit_selector.gd" id="4_xb4v1"]
[ext_resource type="PackedScene" uid="uid://crrf60xb54uea" path="res://scenes/characters/enemies/humanwarrior.tscn" id="7_7pb6i"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ouxo3"]
texture = ExtResource("3_mbbpy")
texture_region_size = Vector2i(80, 80)
use_texture_padding = false
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:0/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
1:4/0 = 0
0:4/0 = 0
4:5/0 = 0
5:5/0 = 0
4:4/0 = 0
5:4/0 = 0
4:3/0 = 0
5:3/0 = 0
4:2/0 = 0
5:2/0 = 0
6:5/0 = 0
7:5/0 = 0
6:4/0 = 0
7:4/0 = 0
6:3/0 = 0
7:3/0 = 0
6:2/0 = 0
7:2/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
8:7/0 = 0
9:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_icy5c"]
texture = ExtResource("3_ouxo3")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_icy5c"]
tile_size = Vector2i(80, 80)
terrain_set_0/mode = 0
sources/2 = SubResource("TileSetAtlasSource_ouxo3")
sources/3 = SubResource("TileSetAtlasSource_icy5c")

[sub_resource type="TileMapPattern" id="TileMapPattern_mbbpy"]
tile_data = PackedInt32Array(0, 1, 6, 65536, 1, 7, 131072, 1, 8, 196608, 1, 9, 262144, 1, 10, 327680, 1, 11, 393216, 1, 12, 458752, 1, 13, 1, 65537, 6, 65537, 65537, 7, 131073, 65537, 8, 196609, 65537, 9, 262145, 65537, 10, 327681, 65537, 11, 393217, 65537, 12, 458753, 65537, 13, 2, 131073, 6, 65538, 131073, 7, 131074, 131073, 8, 196610, 131073, 9, 262146, 131073, 10, 327682, 131073, 11, 393218, 131073, 12, 458754, 131073, 13, 3, 196609, 6, 65539, 196609, 7, 131075, 196609, 8, 196611, 196609, 9, 262147, 196609, 10, 327683, 196609, 11, 393219, 196609, 12, 458755, 196609, 13, 4, 262145, 6, 65540, 262145, 7, 131076, 262145, 8, 196612, 262145, 9, 262148, 262145, 10, 327684, 262145, 11, 393220, 262145, 12, 458756, 262145, 13, 5, 327681, 6, 65541, 327681, 7, 131077, 327681, 8, 196613, 327681, 9, 262149, 327681, 10, 327685, 327681, 11, 393221, 327681, 12, 458757, 327681, 13, 6, 393217, 6, 65542, 393217, 7, 131078, 393217, 8, 196614, 393217, 9, 262150, 393217, 10, 327686, 393217, 11, 393222, 393217, 12, 458758, 393217, 13, 7, 458753, 6, 65543, 458753, 7, 131079, 458753, 8, 196615, 458753, 9, 262151, 458753, 10, 327687, 458753, 11, 393223, 458753, 12, 458759, 458753, 13, 8, 524289, 6, 65544, 524289, 7, 131080, 524289, 8, 196616, 524289, 9, 262152, 524289, 10, 327688, 524289, 11, 393224, 524289, 12, 458760, 524289, 13, 9, 589825, 6, 65545, 589825, 7, 131081, 589825, 8, 196617, 589825, 9, 262153, 589825, 10, 327689, 589825, 11, 393225, 589825, 12, 458761, 589825, 13)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mbbpy"]
texture = ExtResource("3_mbbpy")
texture_region_size = Vector2i(80, 80)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
2:4/0 = 0
0:6/0 = 0
1:6/0 = 0
2:7/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
9:7/0 = 0
9:8/0 = 0
9:9/0 = 0
8:9/0 = 0
8:8/0 = 0
8:7/0 = 0
7:7/0 = 0
6:7/0 = 0
5:7/0 = 0
4:7/0 = 0
3:7/0 = 0
1:7/0 = 0
0:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
7:10/0 = 0
6:10/0 = 0
5:10/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
2:11/0 = 0
1:11/0 = 0
1:12/0 = 0
0:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
9:12/0 = 0
9:11/0 = 0
9:10/0 = 0
8:11/0 = 0
7:12/0 = 0
7:11/0 = 0
8:12/0 = 0
8:10/0 = 0
6:12/0 = 0
6:11/0 = 0
5:12/0 = 0
4:12/0 = 0
4:11/0 = 0
4:10/0 = 0
5:11/0 = 0
3:11/0 = 0
3:12/0 = 0
2:12/0 = 0
0:11/0 = 0

[sub_resource type="TileSet" id="TileSet_ouxo3"]
tile_size = Vector2i(80, 80)
sources/1 = SubResource("TileSetAtlasSource_mbbpy")
pattern_0 = SubResource("TileMapPattern_mbbpy")

[sub_resource type="Curve2D" id="Curve2D_urvlt"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -980.6046, -588.09875, 0, 0, 0, 0, 963.5792, -599.25397, 0, 0, 0, 0, 969.65485, 593.34064, 0, 0, 0, 0, -989.718, 584.2136, 0, 0, 0, 0, -980.6046, -588.09875)
}
point_count = 5

[node name="Level" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_xb4v1")

[node name="Ground" type="Node2D" parent="."]
z_index = -5

[node name="GrassLayer" type="TileMapLayer" parent="Ground"]
y_sort_enabled = true
position = Vector2(2, 25)
tile_map_data = PackedByteArray("AAABAAAAAgABAAEAAAABAAEAAgABAAEAAAACAAEAAgABAAEAAAACAAAAAgABAAEAAAADAAAAAgABAAEAAAADAAEAAgABAAEAAAAEAAEAAgABAAEAAAAEAAAAAgABAAEAAAD//wAAAgABAAEAAAD+/wAAAgABAAEAAAD1//n/AgABAAEAAAD1//r/AgABAAEAAAD1//v/AgABAAEAAAD1//z/AgABAAEAAAD1//3/AgABAAEAAAD1//7/AgABAAEAAAD1////AgABAAEAAAD1/wAAAgABAAEAAAD1/wEAAgABAAEAAAD1/wIAAgABAAEAAAD1/wMAAgABAAEAAAD1/wQAAgABAAEAAAD1/wUAAgABAAEAAAD1/wYAAgABAAEAAAD2//n/AgABAAEAAAD2//r/AgABAAEAAAD2//v/AgABAAEAAAD2//z/AgABAAEAAAD2//3/AgABAAEAAAD2//7/AgABAAEAAAD2////AgABAAEAAAD2/wAAAgABAAEAAAD2/wEAAgABAAEAAAD2/wIAAgABAAEAAAD2/wMAAgABAAEAAAD2/wQAAgABAAEAAAD2/wUAAgABAAEAAAD2/wYAAgABAAEAAAD3//n/AgABAAEAAAD3//r/AgABAAEAAAD3//v/AgABAAEAAAD3//z/AgABAAEAAAD3//3/AgABAAEAAAD3//7/AgABAAEAAAD3////AgABAAEAAAD3/wAAAgABAAEAAAD3/wEAAgABAAEAAAD3/wIAAgABAAEAAAD3/wMAAgABAAEAAAD3/wQAAgABAAEAAAD3/wUAAgABAAEAAAD3/wYAAgABAAEAAAD4//n/AgABAAEAAAD4//r/AgABAAEAAAD4//v/AgABAAEAAAD4//z/AgABAAEAAAD4//3/AgABAAEAAAD4//7/AgABAAEAAAD4////AgABAAEAAAD4/wAAAgABAAEAAAD4/wEAAgABAAEAAAD4/wIAAgABAAEAAAD4/wMAAgABAAEAAAD4/wQAAgABAAEAAAD4/wUAAgABAAEAAAD4/wYAAgABAAEAAAD5//n/AgABAAEAAAD5//r/AgABAAEAAAD5//v/AgABAAEAAAD5//z/AgABAAEAAAD5//3/AgABAAEAAAD5//7/AgABAAEAAAD5////AgABAAEAAAD5/wAAAgABAAEAAAD5/wEAAgABAAEAAAD5/wIAAgABAAEAAAD5/wMAAgABAAEAAAD5/wQAAgABAAEAAAD5/wUAAgABAAEAAAD5/wYAAgABAAEAAAD6//n/AgABAAEAAAD6//r/AgABAAEAAAD6//v/AgABAAEAAAD6//z/AgABAAEAAAD6//3/AgABAAEAAAD6//7/AgABAAEAAAD6////AgABAAEAAAD6/wAAAgABAAEAAAD6/wEAAgABAAEAAAD6/wIAAgABAAEAAAD6/wMAAgABAAEAAAD6/wQAAgABAAEAAAD6/wUAAgABAAEAAAD6/wYAAgABAAEAAAD7//n/AgABAAEAAAD7//r/AgABAAEAAAD7//v/AgABAAEAAAD7//z/AgABAAEAAAD7//3/AgABAAEAAAD7//7/AgABAAEAAAD7////AgABAAEAAAD7/wAAAgABAAEAAAD7/wEAAgABAAEAAAD7/wIAAgABAAEAAAD7/wMAAgABAAEAAAD7/wQAAgABAAEAAAD7/wUAAgABAAEAAAD7/wYAAgABAAEAAAD8//n/AgABAAEAAAD8//r/AgABAAEAAAD8//v/AgABAAEAAAD8//z/AgABAAEAAAD8//3/AgABAAEAAAD8//7/AgABAAEAAAD8////AgABAAEAAAD8/wAAAgABAAEAAAD8/wEAAgABAAEAAAD8/wIAAgABAAEAAAD8/wMAAgABAAEAAAD8/wQAAgABAAEAAAD8/wUAAgABAAEAAAD8/wYAAgABAAEAAAD9//n/AgABAAEAAAD9//r/AgABAAEAAAD9//v/AgABAAEAAAD9//z/AgABAAEAAAD9//3/AgABAAEAAAD9//7/AgABAAEAAAD9////AgABAAEAAAD9/wAAAgABAAEAAAD9/wEAAgABAAEAAAD9/wIAAgABAAEAAAD9/wMAAgABAAEAAAD9/wQAAgABAAEAAAD9/wUAAgABAAEAAAD9/wYAAgABAAEAAAD+//n/AgABAAEAAAD+//r/AgABAAEAAAD+//v/AgABAAEAAAD+//z/AgABAAEAAAD+//3/AgABAAEAAAD+//7/AgABAAEAAAD+////AgABAAEAAAD+/wEAAgABAAEAAAD+/wIAAgABAAEAAAD+/wMAAgABAAEAAAD+/wQAAgABAAEAAAD+/wUAAgABAAEAAAD+/wYAAgABAAEAAAD///n/AgABAAEAAAD///r/AgABAAEAAAD///v/AgABAAEAAAD///z/AgABAAEAAAD///3/AgABAAEAAAD///7/AgABAAEAAAD/////AgABAAEAAAD//wEAAgABAAEAAAD//wIAAgABAAEAAAD//wMAAgABAAEAAAD//wQAAgABAAEAAAD//wUAAgABAAEAAAD//wYAAgABAAEAAAAAAPn/AgABAAEAAAAAAPr/AgABAAEAAAAAAPv/AgABAAEAAAAAAPz/AgABAAEAAAAAAP3/AgABAAEAAAAAAP7/AgABAAEAAAAAAP//AgABAAEAAAAAAAAAAgABAAEAAAAAAAEAAgABAAEAAAAAAAIAAgABAAEAAAAAAAMAAgABAAEAAAAAAAQAAgABAAEAAAAAAAUAAgABAAEAAAAAAAYAAgABAAEAAAABAPn/AgABAAEAAAABAPr/AgABAAEAAAABAPv/AgABAAEAAAABAPz/AgABAAEAAAABAP3/AgABAAEAAAABAP7/AgABAAEAAAABAP//AgABAAEAAAABAAIAAgABAAEAAAABAAMAAgABAAEAAAABAAQAAgABAAEAAAABAAUAAgABAAEAAAABAAYAAgABAAEAAAACAPn/AgABAAEAAAACAPr/AgABAAEAAAACAPv/AgABAAEAAAACAPz/AgABAAEAAAACAP3/AgABAAEAAAACAP7/AgABAAEAAAACAP//AgABAAEAAAACAAIAAgABAAEAAAACAAMAAgABAAEAAAACAAQAAgABAAEAAAACAAUAAgABAAEAAAACAAYAAgABAAEAAAADAPn/AgABAAEAAAADAPr/AgABAAEAAAADAPv/AgABAAEAAAADAPz/AgABAAEAAAADAP3/AgABAAEAAAADAP7/AgABAAEAAAADAP//AgABAAEAAAADAAIAAgABAAEAAAADAAMAAgABAAEAAAADAAQAAgABAAEAAAADAAUAAgABAAEAAAADAAYAAgABAAEAAAAEAPn/AgABAAEAAAAEAPr/AgABAAEAAAAEAPv/AgABAAEAAAAEAPz/AgABAAEAAAAEAP3/AgABAAEAAAAEAP7/AgABAAEAAAAEAP//AgABAAEAAAAEAAIAAgABAAEAAAAEAAMAAgABAAEAAAAEAAQAAgABAAEAAAAEAAUAAgABAAEAAAAEAAYAAgABAAEAAAAFAPn/AgABAAEAAAAFAPr/AgABAAEAAAAFAPv/AgABAAEAAAAFAPz/AgABAAEAAAAFAP3/AgABAAEAAAAFAP7/AgABAAEAAAAFAP//AgABAAEAAAAFAAAAAgABAAEAAAAFAAEAAgABAAEAAAAFAAIAAgABAAEAAAAFAAMAAgABAAEAAAAFAAQAAgABAAEAAAAFAAUAAgABAAEAAAAFAAYAAgABAAEAAAAGAPn/AgABAAEAAAAGAPr/AgABAAEAAAAGAPv/AgABAAEAAAAGAPz/AgABAAEAAAAGAP3/AgABAAEAAAAGAP7/AgABAAEAAAAGAP//AgABAAEAAAAGAAAAAgABAAEAAAAGAAEAAgABAAEAAAAGAAIAAgABAAEAAAAGAAMAAgABAAEAAAAGAAQAAgABAAEAAAAGAAUAAgABAAEAAAAGAAYAAgABAAEAAAAHAPn/AgABAAEAAAAHAPr/AgABAAEAAAAHAPv/AgABAAEAAAAHAPz/AgABAAEAAAAHAP3/AgABAAEAAAAHAP7/AgABAAEAAAAHAP//AgABAAEAAAAHAAAAAgABAAEAAAAHAAEAAgABAAEAAAAHAAIAAgABAAEAAAAHAAMAAgABAAEAAAAHAAQAAgABAAEAAAAHAAUAAgABAAEAAAAHAAYAAgABAAEAAAAIAPn/AgABAAEAAAAIAPr/AgABAAEAAAAIAPv/AgABAAEAAAAIAPz/AgABAAEAAAAIAP3/AgABAAEAAAAIAP7/AgABAAEAAAAIAP//AgABAAEAAAAIAAAAAgABAAEAAAAIAAEAAgABAAEAAAAIAAIAAgABAAEAAAAIAAMAAgABAAEAAAAIAAQAAgABAAEAAAAIAAUAAgABAAEAAAAIAAYAAgABAAEAAAAJAPn/AgABAAEAAAAJAPr/AgABAAEAAAAJAPv/AgABAAEAAAAJAPz/AgABAAEAAAAJAP3/AgABAAEAAAAJAP7/AgABAAEAAAAJAP//AgABAAEAAAAJAAAAAgABAAEAAAAJAAEAAgABAAEAAAAJAAIAAgABAAEAAAAJAAMAAgABAAEAAAAJAAQAAgABAAEAAAAJAAUAAgABAAEAAAAJAAYAAgABAAEAAAAKAPn/AgABAAEAAAAKAPr/AgABAAEAAAAKAPv/AgABAAEAAAAKAPz/AgABAAEAAAAKAP3/AgABAAEAAAAKAP7/AgABAAEAAAAKAP//AgABAAEAAAAKAAAAAgABAAEAAAAKAAEAAgABAAEAAAAKAAIAAgABAAEAAAAKAAMAAgABAAEAAAAKAAQAAgABAAEAAAAKAAUAAgABAAEAAAAKAAYAAgABAAEAAAALAPn/AgABAAEAAAALAPr/AgABAAEAAAALAPv/AgABAAEAAAALAPz/AgABAAEAAAALAP3/AgABAAEAAAALAP7/AgABAAEAAAALAP//AgABAAEAAAALAAAAAgABAAEAAAALAAEAAgABAAEAAAALAAIAAgABAAEAAAALAAMAAgABAAEAAAALAAQAAgABAAEAAAALAAUAAgABAAEAAAALAAYAAgABAAEAAAACAAwAAgAEAAIAAAACAA0AAgAEAAMAAAACAA4AAgAEAAQAAAACAA8AAgAEAAUAAAADAAwAAgAFAAIAAAADAA0AAgAFAAMAAAADAA4AAgAFAAQAAAADAA8AAgAFAAUAAAAEAAwAAgAGAAIAAAAEAA0AAgAGAAMAAAAEAA4AAgAGAAQAAAAEAA8AAgAGAAUAAAAFAAwAAgAHAAIAAAAFAA0AAgAHAAMAAAAFAA4AAgAHAAQAAAAFAA8AAgAHAAUAAAA=")
tile_set = SubResource("TileSet_icy5c")

[node name="DoodadLayer" type="TileMapLayer" parent="Ground"]
tile_map_data = PackedByteArray("AAD3//n/AQACAAMAAAD3/wAAAQACAAUAAAD5//r/AQACAAQAAAD5//7/AQABAAMAAAD6//7/AQAAAAMAAAD6/wIAAQACAAUAAAD7//7/AQABAAQAAAD8/wQAAQABAAMAAAD9/wYAAQABAAQAAAD+/wUAAQABAAQAAAABAAMAAQAAAAMAAAABAAYAAQAAAAMAAAAEAAEAAQAAAAMAAAAFAP3/AQABAAQAAAAGAAEAAQACAAMAAAAGAAIAAQACAAMAAAAHAPv/AQABAAMAAAAHAPz/AQAAAAQAAAAIAPn/AQABAAMAAAAIAP//AQAAAAMAAAAJAAIAAQABAAMAAAAJAAMAAQABAAQAAAAKAPn/AQACAAUAAAAKAP3/AQAAAAQAAAALAPr/AQAAAAMAAAALAP3/AQAAAAQAAAALAAIAAQAAAAQAAAD0//j/AQACAAQAAAD0//v/AQACAAQAAAD0/wAAAQACAAQAAAD0/wIAAQAAAAMAAAD1/wYAAQABAAMAAAD3//v/AQACAAMAAAD4//r/AQABAAUAAAD4/wEAAQAAAAMAAAD4/wIAAQAAAAQAAAD5//j/AQACAAMAAAD5/wEAAQACAAUAAAD8/wAAAQAAAAMAAAD8/wEAAQABAAUAAAD8/wMAAQACAAMAAAD9////AQAAAAMAAAD//wUAAQABAAMAAAAAAP//AQABAAUAAAABAP//AQABAAUAAAABAAUAAQAAAAQAAAADAP7/AQAAAAQAAAADAAUAAQAAAAMAAAAEAAQAAQACAAMAAAAEAAYAAQAAAAQAAAAFAPv/AQAAAAQAAAAFAAIAAQACAAMAAAAGAPv/AQACAAMAAAAHAPj/AQAAAAQAAAAHAP7/AQABAAQAAAAHAAEAAQAAAAMAAAAHAAYAAQAAAAMAAAAIAAcAAQABAAQAAAAJAPv/AQACAAMAAAAKAP7/AQAAAAMAAAALAPv/AQAAAAQAAAALAAQAAQAAAAMAAAAMAAEAAQACAAQAAAAMAAUAAQABAAMAAAD1/wQAAQACAAQAAAD4//7/AQACAAQAAAD5////AQACAAQAAAD6/wMAAQACAAQAAAD7/wIAAQAAAAMAAAD+/wQAAQACAAMAAAD//wQAAQABAAUAAAAAAP7/AQAAAAQAAAAAAAEAAQAAAAMAAAACAP//AQAAAAQAAAAEAP7/AQACAAMAAAAEAAAAAQAAAAMAAAAHAAQAAQACAAQAAAAGAP//AQACAAQAAADz/wYAAQACAAUAAAD0//3/AQABAAUAAAD1//r/AQABAAUAAAD1////AQABAAUAAAD1/wUAAQABAAUAAAD1/wgAAQACAAUAAAD2/wUAAQABAAUAAAD3/wYAAQACAAUAAAD5/wAAAQABAAUAAAD6/wcAAQACAAUAAAD7/wUAAQACAAUAAAD8//7/AQABAAUAAAD8/wIAAQACAAUAAAD+/wYAAQACAAUAAAADAAQAAQACAAUAAAAGAP3/AQABAAUAAAAGAAUAAQACAAUAAAAHAAgAAQABAAUAAAAKAAYAAQABAAUAAAD7//b/AQAAAAcAAAD7//f/AQAAAAgAAAD7//j/AQAAAAkAAAD7//n/AQAAAAoAAAD7//r/AQAAAAsAAAD7//v/AQAAAAwAAAD7//z/AQAAAA0AAAD8//b/AQABAAcAAAD8//f/AQABAAgAAAD8//j/AQABAAkAAAD8//n/AQABAAoAAAD8//r/AQABAAsAAAD8//v/AQABAAwAAAD8//z/AQABAA0AAAD9//b/AQACAAcAAAD9//f/AQACAAgAAAD9//j/AQACAAkAAAD9//n/AQACAAoAAAD9//r/AQACAAsAAAD9//v/AQACAAwAAAD9//z/AQACAA0AAAD+//b/AQADAAcAAAD+//f/AQADAAgAAAD+//j/AQADAAkAAAD+//n/AQADAAoAAAD+//r/AQADAAsAAAD+//v/AQADAAwAAAD+//z/AQADAA0AAAD///b/AQAEAAcAAAD///f/AQAEAAgAAAD///j/AQAEAAkAAAD///n/AQAEAAoAAAD///r/AQAEAAsAAAD///v/AQAEAAwAAAD///z/AQAEAA0AAAAAAPb/AQAFAAcAAAAAAPf/AQAFAAgAAAAAAPj/AQAFAAkAAAAAAPn/AQAFAAoAAAAAAPr/AQAFAAsAAAAAAPv/AQAFAAwAAAAAAPz/AQAFAA0AAAABAPb/AQAGAAcAAAABAPf/AQAGAAgAAAABAPj/AQAGAAkAAAABAPn/AQAGAAoAAAABAPr/AQAGAAsAAAABAPv/AQAGAAwAAAABAPz/AQAGAA0AAAACAPb/AQAHAAcAAAACAPf/AQAHAAgAAAACAPj/AQAHAAkAAAACAPn/AQAHAAoAAAACAPr/AQAHAAsAAAACAPv/AQAHAAwAAAACAPz/AQAHAA0AAAADAPb/AQAIAAcAAAADAPf/AQAIAAgAAAADAPj/AQAIAAkAAAADAPn/AQAIAAoAAAADAPr/AQAIAAsAAAADAPv/AQAIAAwAAAADAPz/AQAIAA0AAAAEAPb/AQAJAAcAAAAEAPf/AQAJAAgAAAAEAPj/AQAJAAkAAAAEAPn/AQAJAAoAAAAEAPr/AQAJAAsAAAAEAPv/AQAJAAwAAAAEAPz/AQAJAA0AAAD7//X/AQAAAAYAAAD8//X/AQABAAYAAAD9//X/AQACAAYAAAD+//X/AQADAAYAAAD///X/AQAEAAYAAAAAAPX/AQAFAAYAAAABAPX/AQAGAAYAAAACAPX/AQAHAAYAAAADAPX/AQAIAAYAAAAEAPX/AQAJAAYAAAA=")
tile_set = SubResource("TileSet_ouxo3")

[node name="ObstacleLayer" type="TileMapLayer" parent="Ground"]

[node name="Player" parent="." instance=ExtResource("1_377w7")]

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.775, 0.775)
position_smoothing_enabled = true

[node name="EnemySpawnArea" type="Path2D" parent="Player"]
position = Vector2(8.406794, 6.915554)
scale = Vector2(0.98756087, 0.9860853)
curve = SubResource("Curve2D_urvlt")

[node name="EnemySpawnFollow" type="PathFollow2D" parent="Player/EnemySpawnArea"]
unique_name_in_owner = true
position = Vector2(-980.6046, -588.09875)
rotation = -0.005737672

[node name="Timer" type="Timer" parent="Player/EnemySpawnArea"]
autostart = true

[node name="AlliedUnits" type="Node2D" parent="."]
y_sort_enabled = true
position = Vector2(19, -181)

[node name="SkeletonWarrior4" parent="AlliedUnits" instance=ExtResource("4_urvlt")]
position = Vector2(498, -160)

[node name="SkeletonWarrior5" parent="AlliedUnits" instance=ExtResource("4_urvlt")]
position = Vector2(354, -166)

[node name="SkeletonWarrior6" parent="AlliedUnits" instance=ExtResource("4_urvlt")]
position = Vector2(225, -151)

[node name="SkeletonWarrior7" parent="AlliedUnits" instance=ExtResource("4_urvlt")]
position = Vector2(460, 409)

[node name="SkeletonWarrior8" parent="AlliedUnits" instance=ExtResource("4_urvlt")]
position = Vector2(543, 457)

[node name="EnemyUnits" type="Node2D" parent="."]

[node name="HumanWarrior" parent="." instance=ExtResource("7_7pb6i")]
position = Vector2(502, 509)

[node name="HumanWarrior2" parent="." instance=ExtResource("7_7pb6i")]
position = Vector2(274, 516)

[node name="HumanWarrior3" parent="." instance=ExtResource("7_7pb6i")]
position = Vector2(63, 509)

[node name="UnitSelector" type="Node2D" parent="."]
z_index = 1
script = ExtResource("4_xb4v1")

[node name="MoveCursor" type="Node2D" parent="."]

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
visible = false
color = Color(0.96197957, 0.6363589, 0.5854872, 1)
energy = 0.27
[node name="MenuLayer" type="CanvasLayer" parent="."]

[connection signal="timeout" from="Player/EnemySpawnArea/Timer" to="." method="_on_timer_timeout"]
